CHangement des Assemblys

--- a/PSharp.Console/PSharp.Console.vbproj
+++ b/PSharp.Console/PSharp.Console.vbproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7E4EDA7E-698D-4BFA-B367-940EB8E601F2}</ProjectGuid>
+    <ProjectGuid>{775316A0-8436-4C2D-97B1-935F5EF9FC1A}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>PSharp</RootNamespace>
-    <AssemblyName>PSharp</AssemblyName>
+    <RootNamespace>PSharp.Console</RootNamespace>
+    <AssemblyName>PSharp.Console</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>Windows</MyType>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
@@ -19,7 +19,7 @@
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\Debug\</OutputPath>
-    <DocumentationFile>PSharp.xml</DocumentationFile>
+    <DocumentationFile>PSharp.Console.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -28,7 +28,7 @@
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DocumentationFile>PSharp.xml</DocumentationFile>
+    <DocumentationFile>PSharp.Console.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
@@ -64,7 +64,8 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PSharp.vb" />
+    <Compile Include="Color.vb" />
+    <Compile Include="Console.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
