--- a/PSharpCompiler/PSharp.Compiler.vbproj
+++ b/PSharpCompiler/PSharp.Compiler.vbproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{66C96EF5-7C2E-4D3E-B8AA-F0048FF5A3F5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>PSharpCompiler</RootNamespace>
-    <AssemblyName>PSharpCompiler</AssemblyName>
+    <AssemblyName>PSharp.Compiler</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>Windows</MyType>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
@@ -19,7 +19,7 @@
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\Debug\</OutputPath>
-    <DocumentationFile>PSharpCompiler.xml</DocumentationFile>
+    <DocumentationFile>PSharp.Compiler.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -28,7 +28,7 @@
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DocumentationFile>PSharpCompiler.xml</DocumentationFile>
+    <DocumentationFile>PSharp.Compiler.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
